# Sprints-cmake-task4-lec4

./: CMakeLists.txt  README.md
include/: Print.h  WriteInFile.h
src/: CMakeLists.txt  Print.cpp  main.cpp
